Feat: get best books for each genre